<resources>
    <string name="app_name">Devfest\'18</string>
    <string-array name="agenda_6_oct_events">
        <item>Introduction</item>
        <item>Speaker - Slanglabs</item>
        <item>Speaker - LBRY</item>
        <item>Speaker - CNCF</item>
        <item>Speaker - Agora.io</item>
        <item>Lunch</item>
        <item>Actions on Google</item>
        <item>Panel Discussion</item>
        <item>Q&amp;A Session</item>
        <item>Networking Session</item>
    </string-array>
    <string-array name="agenda_6_oct_importance">
        <item>0</item>
        <item>1</item>
        <item>1</item>
        <item>1</item>
        <item>1</item>
        <item>0</item>
        <item>1</item>
        <item>0</item>
        <item>0</item>
        <item>1</item>
    </string-array>
    <string-array name="agenda_6_oct_timings">
        <item>9:00 AM - 10:00 AM</item>
        <item>10:00 AM - 10:30 AM</item>
        <item>10:30 AM - 11:00 AM</item>
        <item>11:00 AM - 11:30 AM</item>
        <item>11:30 AM - 12:00 PM</item>
        <item>12:00 PM - 2:00 PM</item>
        <item>2:00 PM - 4:00 PM</item>
        <item>4:00 PM - 5:00 PM</item>
        <item>5:00 PM - 6:00 PM</item>
        <item>6:00 PM - 9:00 PM</item>
    </string-array>
    <string-array name="agenda_6_oct_icons">
        <item>ic_info_white_24dp</item>
        <item>ic_mic_black_24dp</item>
        <item>ic_mic_black_24dp</item>
        <item>ic_mic_black_24dp</item>
        <item>ic_mic_black_24dp</item>
        <item>ic_food_black</item>
        <item>ic_google_assistant_white</item>
        <item>ic_supervisor_account_black_24dp</item>
        <item>ic_question_white</item>
        <item>ic_forum_black_24dp</item>
    </string-array>
    <string-array name="agenda_6_oct_colors">
        <item>yellow</item>
        <item>green</item>
        <item>orange</item>
        <item>blue</item>
        <item>yellow</item>
        <item>green</item>
        <item>orange</item>
        <item>blue</item>
        <item>yellow</item>
        <item>green</item>
    </string-array>
    <string-array name="agenda_7_oct_events">
        <item>Introduction</item>
        <item>Opening Speech</item>
        <item>Pitching</item>
        <item>Lunch</item>
        <item>Pitching</item>
        <item>Break</item>
        <item>Pitching</item>
        <item>Results &amp; Prizes</item>
    </string-array>
    <string-array name="agenda_7_oct_importance">
        <item>0</item>
        <item>1</item>
        <item>1</item>
        <item>0</item>
        <item>1</item>
        <item>0</item>
        <item>1</item>
        <item>1</item>
    </string-array>
    <string-array name="agenda_7_oct_timings">
        <item>9:00 AM - 9:30 AM</item>
        <item>9:30 AM - 10:30 AM</item>
        <item>10:30 AM - 12:00 PM</item>
        <item>12:00 PM - 1:30 PM</item>
        <item>1:30 PM - 4:00 PM</item>
        <item>4:00 PM - 4:15 PM</item>
        <item>4:15 PM - 6:00 PM</item>
        <item>6:00 PM</item>
    </string-array>
    <string-array name="agenda_7_oct_icons">
        <item>ic_info_white_24dp</item>
        <item>ic_mic_black_24dp</item>
        <item>ic_projector_screen</item>
        <item>ic_food_black</item>
        <item>ic_projector_screen</item>
        <item>ic_coffee_black</item>
        <item>ic_projector_screen</item>
        <item>ic_trophy_black</item>
    </string-array>
    <string-array name="agenda_7_oct_colors">
        <item>yellow</item>
        <item>blue</item>
        <item>orange</item>
        <item>green</item>
        <item>blue</item>
        <item>orange</item>
        <item>blue</item>
        <item>yellow</item>
    </string-array>
    <string name="fcm_notification_title_template">Fcm: %1$s</string>
    <string name="fcm_notification_placeholder_text_template">You said %1$s and lorem ipsum dolor
        sit amet, consectetur adipiscing elit
    </string>
    <string name="action_share">Share</string>
    <string name="action_reply">Reply</string>
    <string-array name="navigation_names">
        <item>Home</item>
        <item>Agenda</item>
        <item>About</item>
    </string-array>
    <string-array name="navigation_icons">
        <item></item>
    </string-array>
    <string-array name="speakers_list">
        <item>General</item>
        <item>Ranga Jagannath</item>
        <item>Satish Chandra Gupta</item>
        <item>Sachit Mishra</item>
        <item>Kumar Rangarajan</item>
        <item>Kishore Subramaniyan</item>
        <item>Harsh Dattani</item>
        <item>Shivram Srivasatava</item>
        <item>Amit Tulshyan</item>
    </string-array>
    <string name="speaker_0">General</string>
    <string name="speaker_1">Ranga Jagannath</string>
    <string name="speaker_2">Satish Chandra Gupta</string>
    <string name="speaker_3">Sachit Mishra</string>
    <string name="speaker_4">Kumar Rangarajan</string>
    <string name="speaker_5">Kishore Subramanian</string>
    <string name="speaker_6">Harsh Dattani</string>
    <string name="speaker_7">Shivram Srivasatava</string>
    <string name="speaker_8">Amit Tulshyan</string>
    <string name="slide_one_title">"Welcome!"</string>
    <string name="Slide_one_desc">"Your one stop destination for all things devfest"</string>
    <string name="slide_two_title">"Afraid to miss out?"</string>
    <string name="Slide_two_desc">"Get regular notifications about the slightest of changes"</string>
    <string name="slide_three_title">"Voila!"</string>
    <string name="slide_three_desc">"Stand a chance to win gdg goodies!"</string>
    <string name="my_preference" />
    <string name="my_preference_key" />
    <string name="club_name">Developer Student Circle</string>
    <string name="club_loc">VIT Vellore</string>
    <string name="title_1">About Us</string>
    <string name="text_1">Google Developer Group, VIT Vellore is a non-profit developers group to learn, share and know more about Google technologies. Our events are open to newbies, developers, managers and organizations who are interested in Google\'s technologies or use them as part of their projects.</string>
    <string name="title_2">Tech Talks</string>
    <string name="text_2">Google talks are a grassroots-style series of presentation given by various technical experts spanning a wide spectrum of topics in technology and related areas.</string>
    <string name="title_3">DevFests</string>
    <string name="text_3">DevFests are large scale , community run events that offer speaker sessions across multiple product areas , hackathons , codelabs and much more.</string>
    <string name="title_4">Code School</string>
    <string name="text_4">Google code school teaches web technologies in the comfort of your browser through video lessons , coding challenges and screencasts.</string>
    <string name="title_5">Beta Testing</string>
    <string name="text_5">Beta Testing is the essence of developing a software. We test every aspect of our product before releasing it for the real-world exposure.</string>
    <string name="tth">The Hackathon</string>
    <string name="hq1">What is the format of the hack?</string>
    <string name="ha1">The hack is scheduled to be a month long. During this month participants will have to submit their ideas and work on them. Selected teams will get a chance to pitch their ideas to judges on the final day.</string>
    <string name="hq2">What is the prize money?</string>
    <string name="ha2">The cash prize for the winners is INR 50K, INR 30K, and INR 20K for the first, second and third placed teams respectively along with loads of schwags. There are also prizes for .tech Domain Challenge, Hasura Open Source Challenge, and the Zulip Bot Building Challenge.</string>
    <string name="hq3">When is the event?</string>
    <string name="ha3">The event will be held on the 7th of October where only the pitching session for all the finalists will take place.</string>
    <string name="hq4">What is the venue for the event?</string>
    <string name="ha4">The venue for the event is Anna Auditorium, VIT University, Vellore.</string>
    <string name="hq5">What is the eligibility criteria?</string>
    <string name="ha5">Anyone can register for the hack, as the month progresses eliminations will be made based on the ideas submitted.</string>
    <string name="hq6">What is the timeline for the event?</string>
    <string name="ha6">Refer from the timeline section.</string>
    <string name="hq7">What is the evaluation criteria for my project?</string>
    <string name="ha7">Round 1: Judged on the basis of novelty and feasibility of ideas; Round 2: Judged on the basis of implementation of the idea Round; 3: Decided upon by the judges, after the final pitch</string>
    <string name="hq8">Are there any rules and regulations I am supposed to follow?</string>
    <string name="ha8">Participants are required to follow the guidelines mentioned on the Gravitas website.</string>
    <string name="hq9">How much time will my team get to pitch our idea on the final day?</string>
    <string name="ha9">Each team will get about 3\-5 mins of pitching time.</string>
    <string name="hq10">What do I need to bring to the event?</string>
    <string name="ha10">The participants are expected to carry their laptops and chargers, and their A-game pitching skills to the event.</string>
    <string name="hq11">What is the min and max team size?</string>
    <string name="ha11">There is no minimum team size. Teams up to 4 members will be allowed.</string>
    <string name="hq12">What are problem statements and by when will we get them?</string>
    <string name="ha12">Problem statements will be conveyed to the participants by email. You can refer to the statements at devfest2018.hackerearth.com as well.</string>
    <string name="hq13">What about food?</string>
    <string name="ha13">Meals and other refreshments like coffee will be provided to the participants.</string>
    <string name="hq14">What do I need for the final pitch?</string>
    <string name="ha14">Participants will be required to present a prototype of a fully working project to the judges.</string>
    <string name="hq15">What if I need some help during the event?</string>
    <string name="ha15">If you need any assistance you can write to us at dscvitvellore@gmail.com  or approach any of our coordinators present during the event. All the best, and happy hacking!</string>
    <string name="td">DevTalks</string>
    <string name="dq1">What is DevTalks?</string>
    <string name="da1">DevTalks is a tech convention which will have speakers delivering keynote sessions and engaging in panel discussions centered around the theme of “Disruptive Technologies”. It will also comprise of a networking session at the end for the finalists of the hackathon.</string>
    <string name="dq2">What is the venue for the event?</string>
    <string name="da2">The venue for the event is Anna Auditorium, VIT University, Vellore.</string>
    <string name="dq3">When is the event taking place?</string>
    <string name="da3">The event will take place on the 6th of October.</string>
    <string name="dq4">What is the event timeline?</string>
    <string name="da4">Refer from the previous section</string>
    <string name="dq5">What is the registration procedure?</string>
    <string name="da5">You can register for the event on the Gravitas portal. Due to limited seats, we would be waitlisting you. You will receive a registration form, based on which you will be sent an invite confirming your participation in the convention.</string>
    <string name="dq6">What is the networking session?</string>
    <string name="da6">The networking session would be a closed session where the participants get a chance to have one-on-one interactions with the speaker panel and the judges of the hackathon.</string>
    <string name="dq7">When will the networking session take place?</string>
</resources>